--- a/functions/package.json
+++ b/functions/package.json
@@ -17,7 +17,8 @@
     "express": "^4.17.1",
     "firebase": "^7.5.0",
     "firebase-admin": "^8.6.0",
-    "firebase-functions": "^3.3.0"
+    "firebase-functions": "^3.3.0",
+    "grpc": "^1.24.2"
   },
   "devDependencies": {
     "firebase-functions-test": "^0.1.6"
